test/fixtures/astRegression/shouldFail/assignments/Unassignable.sand
pub class Unassignable {
    unassignable() {
        x() = 8;
    }
}